# envit

./: .gitignore  Cargo.toml  README.md
.notes/: todo.org
src/: de.rs  error.rs  lib.rs  options.rs  querable.rs  ser.rs  types.rs  value.rs
tests/: sample.env
