[package]
name = "envit"
version = "0.1.0"
authors = ["zerosign <r1nlx0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101" }
querable = { version = "^0.0.2", optional = true }
derive_builder = "0.7.2"

[features]
default = []
envit_querable = []